feat: enhance CircularlyLinkedList and related classes; add nullability annotations and remove redundant getter/setter methods